Rearranged directory structure. Up-to-dated README.rst file.
--HG--
rename : gov.nasa.jpf.jdwp/.classpath => .classpath
rename : gov.nasa.jpf.jdwp/.gitignore => .gitignore
rename : gov.nasa.jpf.jdwp/.project => .project
rename : gov.nasa.jpf.jdwp/.settings/org.eclipse.jdt.core.prefs => .settings/org.eclipse.jdt.core.prefs
rename : gov.nasa.jpf.jdwp/NOTES.txt => NOTES.txt
rename : gov.nasa.jpf.jdwp/QA.txt => QA.txt
rename : gov.nasa.jpf.jdwp/TODO.txt => TODO.txt
rename : gov.nasa.jpf.jdwp/bin/ant => bin/ant
rename : gov.nasa.jpf.jdwp/bin/ant.bat => bin/ant.bat
rename : gov.nasa.jpf.jdwp/bin/jpf => bin/jpf
rename : gov.nasa.jpf.jdwp/bin/jpf.bat => bin/jpf.bat
rename : gov.nasa.jpf.jdwp/bin/test => bin/test
rename : gov.nasa.jpf.jdwp/bin/test.bat => bin/test.bat
rename : gov.nasa.jpf.jdwp/build.xml => build.xml
rename : gov.nasa.jpf.jdwp/eclipse/AntBuilder.launch => eclipse/AntBuilder.launch
rename : gov.nasa.jpf.jdwp/jpf.properties => jpf.properties
rename : gov.nasa.jpf.jdwp/lib/junit-4.10.jar => lib/junit-4.10.jar
rename : gov.nasa.jpf.jdwp/lib/log4j-1.2.17.jar => lib/log4j-1.2.17.jar
rename : gov.nasa.jpf.jdwp/lib/slf4j-api-1.7.5.jar => lib/slf4j-api-1.7.5.jar
rename : gov.nasa.jpf.jdwp/lib/slf4j-log4j12-1.7.5.jar => lib/slf4j-log4j12-1.7.5.jar
rename : gov.nasa.jpf.jdwp/lib/slf4j-simple-1.7.5.jar => lib/slf4j-simple-1.7.5.jar
rename : gov.nasa.jpf.jdwp/src/examples/my/packagge/MainClass.java => src/examples/my/packagge/MainClass.java
rename : gov.nasa.jpf.jdwp/src/main/gnu/classpath/jdwp/Jdwp.java => src/main/gnu/classpath/jdwp/Jdwp.java
rename : gov.nasa.jpf.jdwp/src/main/gnu/classpath/jdwp/processor/PacketProcessor.java => src/main/gnu/classpath/jdwp/processor/PacketProcessor.java
rename : gov.nasa.jpf.jdwp/src/main/gnu/classpath/jdwp/transport/ITransport.java => src/main/gnu/classpath/jdwp/transport/ITransport.java
rename : gov.nasa.jpf.jdwp/src/main/gnu/classpath/jdwp/transport/JdwpCommandPacket.java => src/main/gnu/classpath/jdwp/transport/JdwpCommandPacket.j